package 工厂方法模式.延迟加载工厂;

public class ConcreteProduct1 extends Product {
}
